添加元数据

--- a/数值模拟/热传导方程的数值模拟.rst
+++ b/数值模拟/热传导方程的数值模拟.rst
@@ -2,8 +2,9 @@
 热传导方程的数值模拟
 **********************
 
-.. note:: 
-   作者：Chen Longhao   时间：2020年6月25日
+.. metadata::
+   Chen Longhao
+   2020,06,25
 
 热传导方程（或称热方程）是一个重要的偏微分方程，它描述一个区域内的温度如何随时间变化
 其完整形式为：
